--- a/pokemon/pokemon/Classes/Views/Cells/PokemonCell.xib
+++ b/pokemon/pokemon/Classes/Views/Cells/PokemonCell.xib
@@ -21,28 +21,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="281" height="161"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocd-IQ-lVO">
-                                <rect key="frame" x="8" y="8" width="149" height="21"/>
+                                <rect key="frame" x="8" y="8" width="41.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QRi-at-XmW">
-                                <rect key="frame" x="8" y="54.5" width="149" height="21"/>
+                                <rect key="frame" x="8" y="54.5" width="41.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aE2-rg-cMZ">
-                                <rect key="frame" x="8" y="82" width="149" height="21"/>
+                                <rect key="frame" x="8" y="82" width="41.5" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Qx1-y7-7XT">
-                                <rect key="frame" x="165" y="4" width="108" height="153"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="108" id="KEw-ma-dsR"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="748" translatesAutoresizingMaskIntoConstraints="NO" id="Qx1-y7-7XT">
+                                <rect key="frame" x="57.5" y="4" width="215.5" height="153"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -55,6 +52,7 @@
                             <constraint firstItem="ocd-IQ-lVO" firstAttribute="leading" secondItem="mDe-lw-tEF" secondAttribute="leading" constant="8" id="NCS-cs-Li9"/>
                             <constraint firstItem="Qx1-y7-7XT" firstAttribute="top" secondItem="mDe-lw-tEF" secondAttribute="top" constant="4" id="Q3K-3R-nXM"/>
                             <constraint firstItem="QRi-at-XmW" firstAttribute="leading" secondItem="mDe-lw-tEF" secondAttribute="leading" constant="8" id="RWX-AN-Qhw"/>
+                            <constraint firstItem="QRi-at-XmW" firstAttribute="top" secondItem="ocd-IQ-lVO" secondAttribute="bottom" constant="25.5" id="Wuf-3L-0yK"/>
                             <constraint firstItem="aE2-rg-cMZ" firstAttribute="trailing" secondItem="QRi-at-XmW" secondAttribute="trailing" id="Z38-cJ-yMu"/>
                             <constraint firstItem="Qx1-y7-7XT" firstAttribute="leading" secondItem="QRi-at-XmW" secondAttribute="trailing" constant="8" id="bd0-mv-xfM"/>
                             <constraint firstItem="aE2-rg-cMZ" firstAttribute="leading" secondItem="QRi-at-XmW" secondAttribute="leading" id="pVR-nW-w96"/>
