--- a/pokemon/pokemon/Classes/Views/Cells/PokemonCell.xib
+++ b/pokemon/pokemon/Classes/Views/Cells/PokemonCell.xib
@@ -20,60 +20,62 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mDe-lw-tEF">
                         <rect key="frame" x="0.0" y="0.0" width="281" height="161"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ocd-IQ-lVO">
-                                <rect key="frame" x="8" y="8" width="41.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QRi-at-XmW">
-                                <rect key="frame" x="8" y="54.5" width="41.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aE2-rg-cMZ">
-                                <rect key="frame" x="8" y="82" width="41.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="251" horizontalCompressionResistancePriority="748" translatesAutoresizingMaskIntoConstraints="NO" id="Qx1-y7-7XT">
-                                <rect key="frame" x="57.5" y="4" width="215.5" height="153"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kz1-g1-V3s" customClass="PokemonImageView" customModule="pokemon" customModuleProvider="target">
+                                <rect key="frame" x="10" y="26.5" width="68" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="68" id="gaM-cO-pZh"/>
+                                </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nRj-8e-QIx">
+                                <rect key="frame" x="221" y="4" width="42" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jqp-nq-MHV">
+                                <rect key="frame" x="88" y="68" width="185" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="IN5-MQ-C7l">
+                                <rect key="frame" x="88" y="93" width="185" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ocd-IQ-lVO" firstAttribute="top" secondItem="mDe-lw-tEF" secondAttribute="top" constant="8" id="1Cd-2Y-Bmc"/>
-                            <constraint firstAttribute="bottom" secondItem="Qx1-y7-7XT" secondAttribute="bottom" constant="4" id="1de-UC-B0v"/>
-                            <constraint firstItem="aE2-rg-cMZ" firstAttribute="top" secondItem="QRi-at-XmW" secondAttribute="bottom" constant="6.5" id="2KJ-B8-xP4"/>
-                            <constraint firstItem="ocd-IQ-lVO" firstAttribute="trailing" secondItem="QRi-at-XmW" secondAttribute="trailing" id="KAn-C1-s0Q"/>
-                            <constraint firstItem="Qx1-y7-7XT" firstAttribute="centerY" secondItem="QRi-at-XmW" secondAttribute="top" constant="26" id="LRA-Qx-jpo"/>
-                            <constraint firstItem="ocd-IQ-lVO" firstAttribute="leading" secondItem="mDe-lw-tEF" secondAttribute="leading" constant="8" id="NCS-cs-Li9"/>
-                            <constraint firstItem="Qx1-y7-7XT" firstAttribute="top" secondItem="mDe-lw-tEF" secondAttribute="top" constant="4" id="Q3K-3R-nXM"/>
-                            <constraint firstItem="QRi-at-XmW" firstAttribute="leading" secondItem="mDe-lw-tEF" secondAttribute="leading" constant="8" id="RWX-AN-Qhw"/>
-                            <constraint firstItem="QRi-at-XmW" firstAttribute="top" secondItem="ocd-IQ-lVO" secondAttribute="bottom" constant="25.5" id="Wuf-3L-0yK"/>
-                            <constraint firstItem="aE2-rg-cMZ" firstAttribute="trailing" secondItem="QRi-at-XmW" secondAttribute="trailing" id="Z38-cJ-yMu"/>
-                            <constraint firstItem="Qx1-y7-7XT" firstAttribute="leading" secondItem="QRi-at-XmW" secondAttribute="trailing" constant="8" id="bd0-mv-xfM"/>
-                            <constraint firstItem="aE2-rg-cMZ" firstAttribute="leading" secondItem="QRi-at-XmW" secondAttribute="leading" id="pVR-nW-w96"/>
-                            <constraint firstAttribute="trailing" secondItem="Qx1-y7-7XT" secondAttribute="trailing" constant="8" id="prg-Gd-P5B"/>
+                            <constraint firstItem="Kz1-g1-V3s" firstAttribute="top" secondItem="nRj-8e-QIx" secondAttribute="bottom" constant="2" id="0T1-DG-ADw"/>
+                            <constraint firstItem="IN5-MQ-C7l" firstAttribute="top" secondItem="jqp-nq-MHV" secondAttribute="bottom" constant="4" id="27h-Wk-Xvn"/>
+                            <constraint firstItem="IN5-MQ-C7l" firstAttribute="trailing" secondItem="jqp-nq-MHV" secondAttribute="trailing" id="DY5-1r-iVY"/>
+                            <constraint firstAttribute="bottom" secondItem="Kz1-g1-V3s" secondAttribute="bottom" constant="6.5" id="N3V-9e-Csd"/>
+                            <constraint firstItem="Kz1-g1-V3s" firstAttribute="centerY" secondItem="mDe-lw-tEF" secondAttribute="centerY" constant="10" id="U2c-PL-Fit"/>
+                            <constraint firstAttribute="trailing" secondItem="jqp-nq-MHV" secondAttribute="trailing" constant="8" id="ULt-9z-eIV"/>
+                            <constraint firstAttribute="trailing" secondItem="nRj-8e-QIx" secondAttribute="trailing" constant="18" id="UyM-KM-7MA"/>
+                            <constraint firstItem="Kz1-g1-V3s" firstAttribute="leading" secondItem="mDe-lw-tEF" secondAttribute="leading" constant="10" id="fVg-kt-o25"/>
+                            <constraint firstItem="nRj-8e-QIx" firstAttribute="top" secondItem="mDe-lw-tEF" secondAttribute="top" constant="4" id="hch-ib-6PR"/>
+                            <constraint firstItem="jqp-nq-MHV" firstAttribute="leading" secondItem="Kz1-g1-V3s" secondAttribute="trailing" constant="10" id="lQx-9d-UiH"/>
+                            <constraint firstItem="jqp-nq-MHV" firstAttribute="top" secondItem="nRj-8e-QIx" secondAttribute="bottom" constant="43.5" id="qoB-7U-qSz"/>
+                            <constraint firstItem="IN5-MQ-C7l" firstAttribute="leading" secondItem="jqp-nq-MHV" secondAttribute="leading" id="zxJ-tG-pHP"/>
                         </constraints>
                     </view>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstAttribute="top" secondItem="mDe-lw-tEF" secondAttribute="top" id="FZP-mh-DxG"/>
-                <constraint firstAttribute="leading" secondItem="mDe-lw-tEF" secondAttribute="leading" id="MTd-Y6-Uro"/>
-                <constraint firstItem="mDe-lw-tEF" firstAttribute="trailing" secondItem="gTV-IL-0wX" secondAttribute="trailing" id="UCn-ma-Wbk"/>
-                <constraint firstItem="mDe-lw-tEF" firstAttribute="bottom" secondItem="gTV-IL-0wX" secondAttribute="bottom" id="nLJ-4U-Cwd"/>
+                <constraint firstAttribute="bottom" secondItem="mDe-lw-tEF" secondAttribute="bottom" id="7MO-LQ-510"/>
+                <constraint firstItem="mDe-lw-tEF" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="LR8-QV-hzp"/>
+                <constraint firstItem="mDe-lw-tEF" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="dXl-u0-Aje"/>
+                <constraint firstAttribute="trailing" secondItem="mDe-lw-tEF" secondAttribute="trailing" id="fUL-YM-N4Q"/>
             </constraints>
             <size key="customSize" width="281" height="161"/>
             <connections>
                 <outlet property="contentViewCell" destination="mDe-lw-tEF" id="DR1-g6-mPb"/>
-                <outlet property="pokemonIdLabel" destination="ocd-IQ-lVO" id="UL4-Q5-iGa"/>
-                <outlet property="pokemonImageView" destination="Qx1-y7-7XT" id="Lf6-Wn-2Zd"/>
-                <outlet property="pokemonNameLabel" destination="aE2-rg-cMZ" id="YoY-vk-bxw"/>
-                <outlet property="titleLabel" destination="QRi-at-XmW" id="Mmi-zi-C7S"/>
+                <outlet property="pokemonIdLabel" destination="nRj-8e-QIx" id="wxQ-4d-Seh"/>
+                <outlet property="pokemonImageView" destination="Kz1-g1-V3s" id="wfn-mu-Vb8"/>
+                <outlet property="pokemonNameLabel" destination="IN5-MQ-C7l" id="lDS-g2-KL1"/>
+                <outlet property="titleLabel" destination="jqp-nq-MHV" id="KhN-fM-MSK"/>
             </connections>
             <point key="canvasLocation" x="119.56521739130436" y="140.95982142857142"/>
         </collectionViewCell>
