+add: fonts +add: FakeSplashScreen

--- a/pokemon/pokemon/Classes/ViewControllers/PokemonListViewController.xib
+++ b/pokemon/pokemon/Classes/ViewControllers/PokemonListViewController.xib
@@ -12,6 +12,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PokemonListViewController" customModule="pokemon" customModuleProvider="target">
             <connections>
                 <outlet property="pokemonCollectionView" destination="OUI-5B-RBv" id="uUb-28-a5y"/>
+                <outlet property="pokemonSearchBar" destination="ky6-na-QSu" id="EHd-fe-vnW"/>
+                <outlet property="titleLabel" destination="3H3-8L-mrG" id="FVt-n7-qFe"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,8 +22,19 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3H3-8L-mrG">
+                    <rect key="frame" x="24" y="36" width="366" height="37"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ky6-na-QSu">
+                    <rect key="frame" x="24" y="105" width="366" height="51"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="OUI-5B-RBv">
-                    <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                    <rect key="frame" x="0.0" y="156" width="414" height="740"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zWu-TJ-8CR">
                         <size key="itemSize" width="128" height="128"/>
@@ -34,12 +47,18 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="OUI-5B-RBv" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="Hnc-Pd-Tse"/>
+                <constraint firstItem="ky6-na-QSu" firstAttribute="top" secondItem="3H3-8L-mrG" secondAttribute="bottom" constant="32" id="CzL-F2-opI"/>
+                <constraint firstItem="ky6-na-QSu" firstAttribute="leading" secondItem="3H3-8L-mrG" secondAttribute="leading" id="Gf1-oo-owx"/>
+                <constraint firstItem="3H3-8L-mrG" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="-8" id="QBC-vE-ubm"/>
                 <constraint firstAttribute="bottom" secondItem="OUI-5B-RBv" secondAttribute="bottom" id="b2A-2U-7J0"/>
                 <constraint firstItem="OUI-5B-RBv" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="iAY-zO-lbq"/>
+                <constraint firstItem="3H3-8L-mrG" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="24" id="iR9-tn-7DN"/>
+                <constraint firstItem="OUI-5B-RBv" firstAttribute="top" secondItem="ky6-na-QSu" secondAttribute="bottom" id="lDs-it-9s4"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="OUI-5B-RBv" secondAttribute="trailing" id="tw1-AQ-klJ"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="3H3-8L-mrG" secondAttribute="trailing" constant="24" id="xTf-uj-Lhn"/>
+                <constraint firstItem="ky6-na-QSu" firstAttribute="trailing" secondItem="3H3-8L-mrG" secondAttribute="trailing" id="yEg-jj-Jz0"/>
             </constraints>
-            <point key="canvasLocation" x="139" y="151"/>
+            <point key="canvasLocation" x="137.68115942028987" y="150.66964285714286"/>
         </view>
     </objects>
     <resources>
