--- a/pokemon/pokemon/Classes/Views/Cells/PokemonCell.xib
+++ b/pokemon/pokemon/Classes/Views/Cells/PokemonCell.xib
@@ -20,27 +20,33 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mDe-lw-tEF">
                         <rect key="frame" x="0.0" y="0.0" width="281" height="161"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="bottom" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kz1-g1-V3s" customClass="PokemonImageView" customModule="pokemon" customModuleProvider="target">
-                                <rect key="frame" x="10" y="26.5" width="68" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Kz1-g1-V3s" customClass="PokemonImageView" customModule="pokemon" customModuleProvider="target">
+                                <rect key="frame" x="10" y="20" width="68" height="141"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="68" id="gaM-cO-pZh"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nRj-8e-QIx">
-                                <rect key="frame" x="221" y="4" width="42" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="263" y="4" width="0.0" height="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="0.0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jqp-nq-MHV">
-                                <rect key="frame" x="88" y="68" width="185" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="74" y="72" width="199" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="IN5-MQ-C7l">
-                                <rect key="frame" x="88" y="93" width="185" height="21"/>
+                                <rect key="frame" x="74" y="93" width="199" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FRA-0f-ryD">
+                                <rect key="frame" x="10" y="4" width="26.5" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -50,14 +56,16 @@
                             <constraint firstItem="Kz1-g1-V3s" firstAttribute="top" secondItem="nRj-8e-QIx" secondAttribute="bottom" constant="2" id="0T1-DG-ADw"/>
                             <constraint firstItem="IN5-MQ-C7l" firstAttribute="top" secondItem="jqp-nq-MHV" secondAttribute="bottom" constant="4" id="27h-Wk-Xvn"/>
                             <constraint firstItem="IN5-MQ-C7l" firstAttribute="trailing" secondItem="jqp-nq-MHV" secondAttribute="trailing" id="DY5-1r-iVY"/>
-                            <constraint firstAttribute="bottom" secondItem="Kz1-g1-V3s" secondAttribute="bottom" constant="6.5" id="N3V-9e-Csd"/>
+                            <constraint firstItem="FRA-0f-ryD" firstAttribute="leading" secondItem="mDe-lw-tEF" secondAttribute="leading" constant="10" id="IZD-Lf-Sgr"/>
+                            <constraint firstItem="FRA-0f-ryD" firstAttribute="top" secondItem="mDe-lw-tEF" secondAttribute="top" constant="4" id="Kfr-Bl-vZP"/>
+                            <constraint firstAttribute="bottom" secondItem="Kz1-g1-V3s" secondAttribute="bottom" id="N3V-9e-Csd"/>
                             <constraint firstItem="Kz1-g1-V3s" firstAttribute="centerY" secondItem="mDe-lw-tEF" secondAttribute="centerY" constant="10" id="U2c-PL-Fit"/>
                             <constraint firstAttribute="trailing" secondItem="jqp-nq-MHV" secondAttribute="trailing" constant="8" id="ULt-9z-eIV"/>
+                            <constraint firstItem="Kz1-g1-V3s" firstAttribute="centerY" secondItem="jqp-nq-MHV" secondAttribute="centerY" constant="10" id="Upx-hA-y8u"/>
                             <constraint firstAttribute="trailing" secondItem="nRj-8e-QIx" secondAttribute="trailing" constant="18" id="UyM-KM-7MA"/>
                             <constraint firstItem="Kz1-g1-V3s" firstAttribute="leading" secondItem="mDe-lw-tEF" secondAttribute="leading" constant="10" id="fVg-kt-o25"/>
                             <constraint firstItem="nRj-8e-QIx" firstAttribute="top" secondItem="mDe-lw-tEF" secondAttribute="top" constant="4" id="hch-ib-6PR"/>
-                            <constraint firstItem="jqp-nq-MHV" firstAttribute="leading" secondItem="Kz1-g1-V3s" secondAttribute="trailing" constant="10" id="lQx-9d-UiH"/>
-                            <constraint firstItem="jqp-nq-MHV" firstAttribute="top" secondItem="nRj-8e-QIx" secondAttribute="bottom" constant="43.5" id="qoB-7U-qSz"/>
+                            <constraint firstItem="Kz1-g1-V3s" firstAttribute="trailing" secondItem="jqp-nq-MHV" secondAttribute="leading" constant="4" id="lQx-9d-UiH"/>
                             <constraint firstItem="IN5-MQ-C7l" firstAttribute="leading" secondItem="jqp-nq-MHV" secondAttribute="leading" id="zxJ-tG-pHP"/>
                         </constraints>
                     </view>
@@ -75,6 +83,7 @@
                 <outlet property="pokemonIdLabel" destination="nRj-8e-QIx" id="wxQ-4d-Seh"/>
                 <outlet property="pokemonImageView" destination="Kz1-g1-V3s" id="wfn-mu-Vb8"/>
                 <outlet property="pokemonNameLabel" destination="IN5-MQ-C7l" id="lDS-g2-KL1"/>
+                <outlet property="pokemonTypeLabel" destination="FRA-0f-ryD" id="diZ-Im-jb0"/>
                 <outlet property="titleLabel" destination="jqp-nq-MHV" id="KhN-fM-MSK"/>
             </connections>
             <point key="canvasLocation" x="119.56521739130436" y="140.95982142857142"/>
