--- a/pokemon/pokemon/Classes/Views/PokemonListView.xib
+++ b/pokemon/pokemon/Classes/Views/PokemonListView.xib
@@ -30,7 +30,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="v1z-JI-JqW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7GK-kd-t9U"/>
                 <constraint firstAttribute="trailing" secondItem="v1z-JI-JqW" secondAttribute="trailing" id="YFa-Wr-TP6"/>
