--- a/pokemon/pokemon/Classes/Views/PokemonDetailsBottomView.xib
+++ b/pokemon/pokemon/Classes/Views/PokemonDetailsBottomView.xib
@@ -12,30 +12,30 @@
                 <outlet property="bottomView" destination="eIe-Me-1ly" id="kyu-MJ-gpI"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="HiB-wJ-PjM"/>
                 <outlet property="imageViewContainer" destination="a5C-ix-qmI" id="Sut-v2-2La"/>
-                <outlet property="pokemonImageView" destination="Gkb-iF-DN6" id="bRy-6Q-mYr"/>
+                <outlet property="pokemonImageView" destination="Gkb-iF-DN6" id="VpO-Pv-nHf"/>
                 <outlet property="pokemonNameLabel" destination="aoE-Zc-qGX" id="Lsa-6v-fC8"/>
                 <outlet property="pokemonView" destination="Moy-6X-PTI" id="izB-zq-Tij"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="698" height="390"/>
+            <rect key="frame" x="0.0" y="0.0" width="946" height="437"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eIe-Me-1ly">
-                    <rect key="frame" x="-22" y="270" width="742" height="150"/>
+                    <rect key="frame" x="-22" y="317" width="990" height="150"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="150" id="gJk-bA-TwT"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a5C-ix-qmI">
-                    <rect key="frame" x="229" y="102" width="240" height="240"/>
+                    <rect key="frame" x="353" y="149" width="240" height="240"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Moy-6X-PTI">
                             <rect key="frame" x="8" y="8" width="224" height="212"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gkb-iF-DN6" customClass="PokemonImageView" customModule="pokemon" customModuleProvider="target">
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gkb-iF-DN6">
                                     <rect key="frame" x="8" y="8" width="208" height="196"/>
                                 </imageView>
                             </subviews>
@@ -58,14 +58,14 @@
                         <constraint firstAttribute="trailing" secondItem="Moy-6X-PTI" secondAttribute="trailing" constant="8" id="eKi-da-zWa"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aoE-Zc-qGX">
-                    <rect key="frame" x="24" y="316" width="650" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="aoE-Zc-qGX">
+                    <rect key="frame" x="24" y="363" width="898" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="outline_swipe_left_white" translatesAutoresizingMaskIntoConstraints="NO" id="EFx-Sj-KIC">
-                    <rect key="frame" x="189" y="202" width="40" height="40"/>
+                    <rect key="frame" x="313" y="249" width="40" height="40"/>
                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="2ba-4N-S0a"/>
@@ -73,7 +73,7 @@
                     </constraints>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="outline_swipe_right_white" translatesAutoresizingMaskIntoConstraints="NO" id="28W-iu-hMW">
-                    <rect key="frame" x="469" y="202" width="40" height="40"/>
+                    <rect key="frame" x="593" y="249" width="40" height="40"/>
                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="Rnf-N8-jVQ"/>
@@ -97,7 +97,7 @@
                 <constraint firstAttribute="trailing" secondItem="aoE-Zc-qGX" secondAttribute="trailing" constant="24" id="yGV-zL-f9i"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="343.47826086956525" y="-96.428571428571431"/>
+            <point key="canvasLocation" x="523.1884057971015" y="-80.691964285714278"/>
         </view>
     </objects>
     <resources>
