--- a/pokemon/pokemon/Classes/Views/PokemonDetailsTopView.xib
+++ b/pokemon/pokemon/Classes/Views/PokemonDetailsTopView.xib
@@ -4,45 +4,52 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PokemonDetailsTopView" customModule="pokemon" customModuleProvider="target">
+            <connections>
+                <outlet property="contentView" destination="iN0-l3-epB" id="5NT-pA-QfX"/>
+                <outlet property="segmentedControl" destination="w3D-0C-gFd" id="r7K-hP-9jY"/>
+                <outlet property="tableView" destination="RMr-74-mTk" id="yXm-h3-7yO"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Ac8-PF-4Nq">
-                    <rect key="frame" x="30" y="26" width="354" height="32"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RMr-74-mTk">
+                    <rect key="frame" x="20" y="20" width="374" height="825"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="w3D-0C-gFd">
+                    <rect key="frame" x="108.5" y="865" width="197" height="32"/>
                     <segments>
                         <segment title="First"/>
                         <segment title="Second"/>
+                        <segment title=""/>
                     </segments>
+                    <connections>
+                        <action selector="segmentedControlWasClicked:" destination="-1" eventType="valueChanged" id="O2f-jp-JlM"/>
+                    </connections>
                 </segmentedControl>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="RMr-74-mTk">
-                    <rect key="frame" x="20" y="77" width="374" height="799"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                </tableView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Ac8-PF-4Nq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="26" id="IWu-8J-GWD"/>
-                <constraint firstItem="Ac8-PF-4Nq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="L8d-Om-p7R"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="w3D-0C-gFd" secondAttribute="trailing" constant="24" id="ILg-tI-Sju"/>
                 <constraint firstItem="RMr-74-mTk" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="P5f-el-0wM"/>
-                <constraint firstItem="RMr-74-mTk" firstAttribute="top" secondItem="Ac8-PF-4Nq" secondAttribute="bottom" constant="20" id="cyD-yt-0ce"/>
-                <constraint firstAttribute="trailing" secondItem="Ac8-PF-4Nq" secondAttribute="trailing" constant="30" id="hnu-sK-GS2"/>
-                <constraint firstAttribute="bottom" secondItem="RMr-74-mTk" secondAttribute="bottom" constant="20" id="pgz-2y-yqc"/>
+                <constraint firstItem="w3D-0C-gFd" firstAttribute="centerX" secondItem="RMr-74-mTk" secondAttribute="centerX" id="UF2-lh-ufY"/>
+                <constraint firstItem="w3D-0C-gFd" firstAttribute="top" secondItem="RMr-74-mTk" secondAttribute="bottom" constant="20" id="VcB-KH-71g"/>
+                <constraint firstItem="w3D-0C-gFd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="W5i-ed-ZIw"/>
+                <constraint firstAttribute="bottom" secondItem="w3D-0C-gFd" secondAttribute="bottom" id="kyK-La-wPu"/>
+                <constraint firstItem="RMr-74-mTk" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="mdO-tN-yqc"/>
                 <constraint firstAttribute="trailing" secondItem="RMr-74-mTk" secondAttribute="trailing" constant="20" id="t0a-mV-WIP"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="139" y="102"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
