--- a/pokemon/pokemon/Classes/Views/PokemonDetailsBottomView.xib
+++ b/pokemon/pokemon/Classes/Views/PokemonDetailsBottomView.xib
@@ -30,13 +30,13 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a5C-ix-qmI">
-                    <rect key="frame" x="353" y="149" width="240" height="240"/>
+                    <rect key="frame" x="363" y="169" width="220" height="220"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Moy-6X-PTI">
-                            <rect key="frame" x="8" y="8" width="224" height="212"/>
+                            <rect key="frame" x="8" y="8" width="204" height="192"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gkb-iF-DN6">
-                                    <rect key="frame" x="8" y="8" width="208" height="196"/>
+                                    <rect key="frame" x="8" y="8" width="188" height="176"/>
                                 </imageView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -51,7 +51,7 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="Moy-6X-PTI" firstAttribute="leading" secondItem="a5C-ix-qmI" secondAttribute="leading" constant="8" id="COI-i9-qaG"/>
-                        <constraint firstAttribute="width" constant="240" id="GFf-Hl-0wN"/>
+                        <constraint firstAttribute="width" constant="220" id="GFf-Hl-0wN"/>
                         <constraint firstItem="Moy-6X-PTI" firstAttribute="top" secondItem="a5C-ix-qmI" secondAttribute="top" constant="8" id="MC1-JQ-lLM"/>
                         <constraint firstAttribute="width" secondItem="a5C-ix-qmI" secondAttribute="height" multiplier="1:1" id="PNb-M6-h1i"/>
                         <constraint firstAttribute="bottom" secondItem="Moy-6X-PTI" secondAttribute="bottom" constant="20" symbolic="YES" id="ZwG-38-1lT"/>
@@ -65,7 +65,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="outline_swipe_left_white" translatesAutoresizingMaskIntoConstraints="NO" id="EFx-Sj-KIC">
-                    <rect key="frame" x="313" y="249" width="40" height="40"/>
+                    <rect key="frame" x="323" y="259" width="40" height="40"/>
                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="2ba-4N-S0a"/>
@@ -73,7 +73,7 @@
                     </constraints>
                 </imageView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="outline_swipe_right_white" translatesAutoresizingMaskIntoConstraints="NO" id="28W-iu-hMW">
-                    <rect key="frame" x="593" y="249" width="40" height="40"/>
+                    <rect key="frame" x="583" y="259" width="40" height="40"/>
                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="Rnf-N8-jVQ"/>
@@ -94,6 +94,7 @@
                 <constraint firstAttribute="leading" secondItem="eIe-Me-1ly" secondAttribute="leading" constant="22" id="bwp-xy-7zV"/>
                 <constraint firstItem="EFx-Sj-KIC" firstAttribute="centerY" secondItem="a5C-ix-qmI" secondAttribute="centerY" id="fMk-Hi-hkp"/>
                 <constraint firstItem="a5C-ix-qmI" firstAttribute="bottom" secondItem="eIe-Me-1ly" secondAttribute="top" constant="72" id="sIh-r0-nMy"/>
+                <constraint firstItem="a5C-ix-qmI" firstAttribute="top" relation="lessThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="top" priority="999" constant="10" id="vvO-vr-C51"/>
                 <constraint firstAttribute="trailing" secondItem="aoE-Zc-qGX" secondAttribute="trailing" constant="24" id="yGV-zL-f9i"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
